2014-05-22	SilverNexus
	* settings.h: Add search_string to settings so fewer variables go on the stack during recursion.
	* settings.c: Initialized search string to 0 in init_settings().
	* parseArgs.c: Added parsing for -s and --search flags.
	* main.h: Update function headers for extraction of search string.
	* main.c: Update function calls to reflect addition of search string to settings.

2014-05-22	SilverNexus
	* main.c: Fix bug in which a folder without a trailing "/" as the search directory would crash the program.

2014-05-22	SilverNexus
	* dir_list.c,
	* dir_list.h,
	* settings.h,
	* settings.c: Cleaned up dir_list code by making functions generic to dir_lists.
	* main.c: updated list iterator to match new typedef.
	* Makefile: Added dir_list.o to build process.

2014-05-22	SilverNexus
	* settings.h: Changed root_dir to be a linked list.
	* settings.c: Added function to add to the root_dir linked list.
	* parseArgs.c: Changed parsing of root_dir to utilize linked list.
	* main.c: Added parsing of multiple root directories.

2014-05-21	SilverNexus
	* main.c: Only open output file when needed.

2014-05-21	SilverNexus
	* settings.h,
	* settings.c,
	* main.c,
	* parseArgs.c: Made root directory search argument location controlled by -d flag.

2014-05-21	SilverNexus
	* ErrorLog.c: All messages go to log.txt.

2014-05-21	SilverNexus
	* Initial commits. Setting up files for later use.