@@ -1,3 +1,9 @@
+2014-05-23	SilverNexus
+	* settings.h: Add output_file field for custom output file location.
+	* settings.c: Set a default value for output_file.
+	* parseArgs.c: Add information and parsing for -o and --output flags.
+	* main.c: Adjust file handling and output to handle variable output file name.
+
 2014-05-22	SilverNexus
 	* settings.h: Add search_string to settings so fewer variables go on the stack during recursion.
 	* settings.c: Initialized search string to 0 in init_settings().
